Current search info and Place booking fixed scroll follow.

--- a/modules/rooms_booking_manager/css/booking_search.css
+++ b/modules/rooms_booking_manager/css/booking_search.css
@@ -76,6 +76,7 @@
 .rooms-management-form .rooms-current-search__info {
   float: left; /* or right */
   margin-bottom: 20px;
+  background: #ffffff;
 }
 .rooms-current-search__info .form-item,
 .rooms-current-search__actions {
